logged in modal + refactor

--- a/RetroAchievementTracker/Pages/Home.razor
+++ b/RetroAchievementTracker/Pages/Home.razor
@@ -173,6 +173,6 @@
             MaxWidth = MaxWidth.Medium
         };
 
-        var dialog = DialogService.Show<GameModalLoggedOut>(null, parameters, options);
+        var dialog = DialogService.Show<GameModal>(null, parameters, options);
     }
 }
