--- a/RetroAchievementTracker/Pages/Nintendo/GameBoyAdvance.razor
+++ b/RetroAchievementTracker/Pages/Nintendo/GameBoyAdvance.razor
@@ -1,19 +1,7 @@
 ﻿@page "/gameboyadvance"
-
+@using RetroAchievementTracker.Data.Login
 @using RetroAchievementTracker.Data.TableData
 @using RetroAchievementTracker.Data.Enums
 
-@inject TableDataService TableDataService;
-
 <MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">Gameboy Advance</MudText>
-
-<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
-
-@code {
-    public List<TableData> TableData;
-
-    protected override void OnInitialized()
-    {
-        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.GameBoyAdvance);
-    }
-}
+<GamesTable ConsoleId=(int)Consoles.ConsoleNames.GameBoyAdvance></GamesTable>
