--- a/RetroAchievementTracker/Pages/Other/MSX.razor
+++ b/RetroAchievementTracker/Pages/Other/MSX.razor
@@ -1,19 +1,6 @@
 ﻿@page "/msx"
+@using RetroAchievementTracker.Data.Login
 @using RetroAchievementTracker.Data.TableData
 @using RetroAchievementTracker.Data.Enums
-
-@inject TableDataService TableDataService;
-
 <MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">MSX</MudText>
-
-<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
-
-@code {
-    public List<TableData> TableData;
-
-    protected override void OnInitialized()
-    {
-        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.MSX);
-    }
-}
-
+<GamesTable ConsoleId=(int)Consoles.ConsoleNames.MSX></GamesTable>
