--- a/RetroAchievementTracker/Pages/Other/NeoGeoPocket.razor
+++ b/RetroAchievementTracker/Pages/Other/NeoGeoPocket.razor
@@ -1,19 +1,8 @@
 ﻿@page "/neogeopocket"
+@using RetroAchievementTracker.Data.Login
 @using RetroAchievementTracker.Data.TableData
 @using RetroAchievementTracker.Data.Enums
 
-@inject TableDataService TableDataService;
-
 <MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">NeoGeo Pocket</MudText>
-
-<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
-
-@code {
-    public List<TableData> TableData;
-
-    protected override void OnInitialized()
-    {
-        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.NeoGeoPocket);
-    }
-}
+<GamesTable ConsoleId=(int)Consoles.ConsoleNames.NeoGeoPocket></GamesTable>
 
