--- a/RetroAchievementTracker/Pages/Other/Odyssesy2.razor
+++ b/RetroAchievementTracker/Pages/Other/Odyssesy2.razor
@@ -1,18 +1,7 @@
 ﻿@page "/odyssesy2"
+@using RetroAchievementTracker.Data.Login
 @using RetroAchievementTracker.Data.TableData
 @using RetroAchievementTracker.Data.Enums
 
-@inject TableDataService TableDataService;
-
 <MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">Odyssesy2</MudText>
-
-<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
-
-@code {
-    public List<TableData> TableData;
-
-    protected override void OnInitialized()
-    {
-        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.MagnavoxOdyssey2);
-    }
-}
+<GamesTable ConsoleId=(int)Consoles.ConsoleNames.MagnavoxOdyssey2></GamesTable>
