--- a/RetroAchievementTracker/Pages/Sega/GameGear.razor
+++ b/RetroAchievementTracker/Pages/Sega/GameGear.razor
@@ -1,18 +1,7 @@
 ﻿@page "/gamegear"
+@using RetroAchievementTracker.Data.Login
 @using RetroAchievementTracker.Data.TableData
 @using RetroAchievementTracker.Data.Enums
 
-@inject TableDataService TableDataService;
-
 <MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">GameGear</MudText>
-
-<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
-
-@code {
-    public List<TableData> TableData;
-
-    protected override void OnInitialized()
-    {
-        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.GameGear);
-    }
-}
+<GamesTable ConsoleId=(int)Consoles.ConsoleNames.GameGear></GamesTable>
