--- a/RetroAchievementTracker/Pages/Sega/SG1000.razor
+++ b/RetroAchievementTracker/Pages/Sega/SG1000.razor
@@ -1,18 +1,7 @@
 ﻿@page "/sg1000"
+@using RetroAchievementTracker.Data.Login
 @using RetroAchievementTracker.Data.TableData
 @using RetroAchievementTracker.Data.Enums
 
-@inject TableDataService TableDataService;
-
 <MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">SG100</MudText>
-
-<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
-
-@code {
-    public List<TableData> TableData;
-
-    protected override void OnInitialized()
-    {
-        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.SG100);
-    }
-}
+<GamesTable ConsoleId=(int)Consoles.ConsoleNames.SG100></GamesTable>
