--- a/RetroAchievementTracker/Shared/GameModal.razor
+++ b/RetroAchievementTracker/Shared/GameModal.razor
@@ -1,4 +1,5 @@
 ﻿@using RetroAchievementTracker.Data.GameDataModal
+@using DateTimeToStringWithSuffix
 
 <MudDialog>
     <TitleContent>
@@ -15,7 +16,13 @@
                 </MudItem>
                 <MudItem xs=3>
                     <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Achievement Count</MudText>
-                    <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.AchievementCount</MudText>
+
+                    <MudText Typo="Typo.h6" Align="Align.Center">
+                        @if(LoggedIn)
+                        {
+                            @GameDataModal.AchievementsUnlocked
+                        }
+                        / @GameDataModal.AchievementCount (@GameDataModal.PercentageCompleted)</MudText>
                 </MudItem>
                 <MudItem xs=3>
                     <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Genre</MudText>
@@ -26,8 +33,8 @@
                     <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.ConsoleName</MudText>
                 </MudItem>
                 <MudItem xs=3>
-                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Players Casual/HC</MudText>
-                    <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.PlayersCasual / @GameDataModal.PlayersHardcore</MudText>
+                    <MudText Typo="Typo.h5" Align="Align.Center" Style="font-weight: bold">Players Casual (HC)</MudText>
+                    <MudText Typo="Typo.h6" Align="Align.Center">@GameDataModal.PlayersCasual (@GameDataModal.PlayersHardcore)</MudText>
                 </MudItem>
                 @foreach(var achievement in GameDataModal.Achievements)
                 {
@@ -43,6 +50,17 @@
                             <MudText>Points: @achievement.Value.Points</MudText>
                             <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
                             <MudText>Players earned (HC): @achievement.Value.NumAwarded (@achievement.Value.NumAwardedHardcore)</MudText>
+                            @if (LoggedIn)
+                            {
+                                @if (achievement.Value.DateEarnedHardcore != null)
+                                {
+                                    <MudText>Date Unlocked (HC): @DateTime.Parse(achievement.Value.DateEarnedHardcore.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
+                                }
+                                @if (achievement.Value.DateEarned != null)
+                                {
+                                    <MudText>Date Unlocked: @DateTime.Parse(achievement.Value.DateEarned.ToString()).ToStringWithSuffix("dd MMMM yyyy - hh:mmtt zzz")</MudText>
+                                }
+                            }
                         </TooltipContent>
                     </MudTooltip>
                 }
@@ -63,6 +81,7 @@
 @code {
     [CascadingParameter] public MudDialogInstance MudDialog { get; set; }
     [Parameter] public GameDataModal GameDataModal { get; set; }
+    [Parameter] public bool LoggedIn { get; set; }
 
     private void Cancel()
     {
