--- a/RetroAchievementTracker/Shared/GamesTable.razor
+++ b/RetroAchievementTracker/Shared/GamesTable.razor
@@ -7,7 +7,7 @@
 @inject ISnackbar Snackbar;
 @inject IDialogService DialogService;
 @inject LoginService LoginService;
-@inject Blazored.LocalStorage.ILocalStorageService LocalStorage
+@inject Blazored.LocalStorage.ILocalStorageService LocalStorage;
 @inject TableDataService TableDataService;
 
 @if(DataInTable != null)
