update achievements daily

--- a/RetroAchievementTracker/Pages/Home.razor
+++ b/RetroAchievementTracker/Pages/Home.razor
@@ -14,7 +14,7 @@
 
 @if(LoggedIn)
 {
-    <MudText Typo="Typo.h2" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">Welcome Back, @System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(LoggedInUser)</MudText>
+    <MudText Typo="Typo.h2" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">Welcome Back, @System.Globalization.CultureInfo.CurrentCulture.TextInfo.ToTitleCase(LoggedInUser)!</MudText>
 
 }
 else
