--- a/RetroAchievementTracker/Shared/MainLayout.razor
+++ b/RetroAchievementTracker/Shared/MainLayout.razor
@@ -30,6 +30,14 @@
             ActionDefault = "#29B6F6",
             TextSecondary = "#29B6F6",
             Surface = "#202020"
+        },
+
+        Typography = new Typography()
+        {
+            Default = new Default()
+            {
+                FontFamily = new[] { "Nunito" , "sans-serif" }
+            }
         }
     };
 }
