Amstrad CPC added

--- a/RetroAchievementTracker/Shared/NavMenu.razor
+++ b/RetroAchievementTracker/Shared/NavMenu.razor
@@ -69,6 +69,7 @@
             <MudNavLink Href="/vectrex" Style="color: #E3F2FD;">Vectrex<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.Vectrex]/@gameCounts[(int)Consoles.ConsoleNames.Vectrex]</MudText></MudNavLink>
             <MudNavLink Href="/watarasupervision" Style="color: #E3F2FD;">Watara Supervision<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.WataraSupervision]/@gameCounts[(int)Consoles.ConsoleNames.WataraSupervision]</MudText></MudNavLink>
             <MudNavLink Href="/wonderswan" Style="color: #E3F2FD;">WonderSwan<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.WonderSwan]/@gameCounts[(int)Consoles.ConsoleNames.WonderSwan]</MudText></MudNavLink>
+            <MudNavLink Href="/amstradcpc" Style="color: #E3F2FD;">Amstrad CPC<MudSpacer /><MudText Color=Color.Error Style="display: inline;">@gameCompletedCounts[(int)Consoles.ConsoleNames.AmstradCPC]/@gameCounts[(int)Consoles.ConsoleNames.AmstradCPC]</MudText></MudNavLink>
         </MudNavGroup>
     </MudNavMenu>
 </MudDrawer>
