--- a/RetroAchievementTracker/Pages/Home.razor
+++ b/RetroAchievementTracker/Pages/Home.razor
@@ -23,7 +23,7 @@ else
 }
 
 <MudContainer MaxWidth="MaxWidth.Large" Style="overflow: hidden">
-    <MudText Typo="Typo.h5" Align="Align.Center">Games Added - @DateTime.Today.Date.ToStringWithSuffix("dd MMMM")</MudText>
+    <MudText Typo="Typo.h5" Align="Align.Center">Games Added/Updated - @DateTime.Today.Date.ToStringWithSuffix("dd MMMM")</MudText>
     @if(gamesToday.Count == 0)
     {
         <MudText Typo="Typo.h6" Align="Align.Center">No games added :(</MudText>
@@ -48,7 +48,7 @@ else
         </MudTable>
     }
 
-    <MudText Typo="Typo.h5" Align="Align.Center" Class="mt-4">Games Added - @DateTime.Now.AddDays(-1).ToStringWithSuffix("dd MMMM")</MudText>
+    <MudText Typo="Typo.h5" Align="Align.Center" Class="mt-4">Games Added/Updated - @DateTime.Now.AddDays(-1).ToStringWithSuffix("dd MMMM")</MudText>
     @if(gamesYesterday.Count == 0)
     {
         <MudText Typo="Typo.h6" Align="Align.Center">No games added :(</MudText>
@@ -73,7 +73,7 @@ else
         </MudTable>
     }
 
-    <MudText Typo="Typo.h5" Align="Align.Center" Class="mt-4">Games Added - @DateTime.Now.AddDays(-2).ToStringWithSuffix("dd MMMM")</MudText>
+    <MudText Typo="Typo.h5" Align="Align.Center" Class="mt-4">Games Added/Updated - @DateTime.Now.AddDays(-2).ToStringWithSuffix("dd MMMM")</MudText>
     @if(games2Days.Count == 0)
     {
         <MudText Typo="Typo.h6" Align="Align.Center">No games added :(</MudText>
@@ -98,7 +98,7 @@ else
         </MudTable>
     }
 
-    <MudText Typo="Typo.h5" Align="Align.Center" Class="mt-4">Games Added - @DateTime.Now.AddDays(-3).ToStringWithSuffix("dd MMMM")</MudText>
+    <MudText Typo="Typo.h5" Align="Align.Center" Class="mt-4">Games Added/Updated - @DateTime.Now.AddDays(-3).ToStringWithSuffix("dd MMMM")</MudText>
     @if(games3Days.Count == 0)
     {
         <MudText Typo="Typo.h6" Align="Align.Center">No games added :(</MudText>
@@ -123,7 +123,7 @@ else
         </MudTable>
     }
 
-    <MudText Typo="Typo.h5" Align="Align.Center" Class="mt-4">Games Added - @DateTime.Now.AddDays(-4).ToStringWithSuffix("dd MMMM")</MudText>
+    <MudText Typo="Typo.h5" Align="Align.Center" Class="mt-4">Games Added/Updated - @DateTime.Now.AddDays(-4).ToStringWithSuffix("dd MMMM")</MudText>
     @if(games4Days.Count == 0)
     {
         <MudText Typo="Typo.h6" Align="Align.Center">No games added :(</MudText>
